config/paxi/datapacks/lostmons-cobblemon: 0.4.1 -> 0.4.2

--- a/config/paxi/datapacks/lostmons-cobblemon.pw.toml
+++ b/config/paxi/datapacks/lostmons-cobblemon.pw.toml
@@ -1,13 +1,13 @@
 name = "LostMons [Cobblemon]"
-filename = "LostMons [Cobblemon] v0.4.1.zip"
+filename = "LostMons [Cobblemon] v0.4.2.zip"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/isWGaSnM/versions/ZMJNfNwP/LostMons%20%5BCobblemon%5D%20v0.4.1.zip"
+url = "https://cdn.modrinth.com/data/isWGaSnM/versions/cnlS14Kp/LostMons%20%5BCobblemon%5D%20v0.4.2.zip"
 hash-format = "sha1"
-hash = "1876fafb700411573347ec532e4a48aeeb1cf5b2"
+hash = "eaaec961f3e3d11b029a2e96949a622c9628f724"
 
 [update]
 [update.modrinth]
 mod-id = "isWGaSnM"
-version = "ZMJNfNwP"
+version = "cnlS14Kp"
