pack: updates datapacks and mods
config/paxi/datapacks/alolamons: 1.1 -> 1.2
config/paxi/datapacks/mysticmons: 1.4 -> 1.5
mods/xaeros-minimap: 23.4.4 -> 23.5.0
mods/xaeros-world-map: 1.30.3 -> 1.30.6

--- a/config/paxi/datapacks/alolamons.pw.toml
+++ b/config/paxi/datapacks/alolamons.pw.toml
@@ -1,13 +1,13 @@
 name = "AlolaMons"
-filename = "AlolaMons_v1.1.zip"
+filename = "AlolaMons_v1.2.zip"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/Oi0Vgvgn/versions/7XywXz0e/AlolaMons_v1.1.zip"
+url = "https://cdn.modrinth.com/data/Oi0Vgvgn/versions/Dpv9Azi0/AlolaMons_v1.2.zip"
 hash-format = "sha1"
-hash = "d62e4a32d7f40ed4bed4b899b5b65dcae1173bab"
+hash = "84c6ceec7100d02d68446e58924da16053837e16"
 
 [update]
 [update.modrinth]
 mod-id = "Oi0Vgvgn"
-version = "7XywXz0e"
+version = "Dpv9Azi0"
